# FluidML

./: .gitignore  LICENSE  README.md  constraints.txt  dev-requirements.txt  justfile  pyproject.toml  requirements.txt  setup.py
examples/: README.md  make_config.py  make_folders.sh  plot_b.py  run_cases.sh
examples/PH-Re10595_CD-Re12600/: config.py  train.py
examples/PH-Re10595_CD-Re12600_SD-Re2900/: config.py
examples/PH-Re10595_SD-Re2900/: config.py  utils.py
examples/SD-Re2900_SD-Re3500/: config.py  plot_b.py
examples/template_case/: config.py
fixtures/: tensors.py
fluidml/: __init__.py  features.py  models.py  openfoam.py  tensor_basis.py  tree.py  utils.py  version.py
fluidml/models/: __init__.py  tbdt.py  tbdt_target.py  tbrf.py  tree.py
fluidml/tests/: test_models.py  test_utils.py
tests/: __init__.py  test_features.py  test_openfoam.py  test_utils.py
tests/models/: test_tbdt.py  test_tbrf.py
