[build-system]
requires = ["setuptools>=66.0"]
build-backend = "setuptools.build_meta"


[project]
name = "fluidml"
version = "0.12.0"
authors = [
    { name = "Alix Bernard", email = "alix.bernard9@gmail.com" },
]
maintainers = [
    { name = "Alix Bernard", email = "alix.bernard9@gmail.com" },
]
description = "Implementation of machine learning algorithms for fluid dynamics"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "treelib>=1.7",
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
]
dev = [
    "mypy",
    "ruff",
    "ruff-lsp",
    "pyright",
]
examples = [
    "matplotlib>=2.0",
    "scipy",
    "sklearn",
]


[project.urls]
Homepage = "https://github.com/AlixBernard/FluidML"
"Bug Tracker" = "https://github.com/AlixBernard/FluidML/issues"


[tool.setuptools]
packages = ["fluidml"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F", "W", "I", "N", "NPY", "RUF", "W"]
ignore = ["N803", "N806"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "I"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

line-length = 79

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.11.
target-version = "py311"

[tool.ruff.per-file-ignores]
"__init__.py" = ["I001", "F403", "F405"]

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
